--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,5 +1,6 @@
 const path = require('path');
 
 module.exports = {
-  config: './src/config/database',
+  config: path.resolve(__dirname, 'src', 'config', 'database.js'),
+  'migrations-path': path.resolve(__dirname, 'src', 'database', 'migrations'),
 };
